<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="player.wellnesssolutions.com.ui.fragment_search_videos_by.SearchVideosByFragment">

    <player.wellnesssolutions.com.common.customize_views.MMBackGroundView
        android:id="@+id/imgBgSearchScreen"
        android:contentDescription="@string/content_desc_search_videos_by"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:dimBackground="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextStyle_TvTitle.ScreenSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_search_videos_by_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle2"
        style="@style/TextStyle_Title2.ScreenSearch"
        android:text="@string/screen_search_videos_by_choose_a_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle" />

    <player.wellnesssolutions.com.common.customize_views.MMButton
        android:id="@+id/btnPrevious"
        style="@style/TextStyle_Button_Previous_SearchScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_back"
        android:visibility="invisible"
        app:border="true"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchVideosBy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_goneMarginTop="@dimen/margin" />

</androidx.constraintlayout.widget.ConstraintLayout>