<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="player.wellnesssolutions.com.ui.fragment_search_result_videos.SearchResultFragment">

    <player.wellnesssolutions.com.common.customize_views.MMBackGroundView
        android:id="@+id/imgBgSearchScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:visibility="gone"
        app:dimBackground="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleSR"
        style="@style/TextStyle_TvTitle.SearchResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/screen_search_result_tv_title"
        app:layout_constraintEnd_toStartOf="@+id/btnPrevious"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <player.wellnesssolutions.com.common.customize_views.MMButton
        android:id="@+id/btnPrevious"
        style="@style/TextStyle_Button_Previous_SearchScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_back"
        app:border="true"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleSR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleSR" />

    <player.wellnesssolutions.com.common.customize_views.MMTextView
        android:id="@+id/btnDownloadAllSelectedVideos"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginx3"
        android:paddingStart="@dimen/screen_search_result_btn_download_all_padding_lr"
        android:paddingTop="@dimen/screen_search_result_btn_download_all_padding_tb"
        android:paddingEnd="@dimen/screen_search_result_btn_download_all_padding_lr"
        android:paddingBottom="@dimen/screen_search_result_btn_download_all_padding_tb"
        android:text="@string/download"
        android:textSize="@dimen/btn_previous_text_size"
        android:textStyle="bold|italic"
        app:cornerRadius="@dimen/radius_button"
        app:layout_constraintBottom_toBottomOf="@+id/btnPrevious"
        app:layout_constraintEnd_toStartOf="@id/btnPrevious"
        app:layout_constraintTop_toTopOf="@+id/btnPrevious"
        app:strokeWidth="@dimen/stroke_4dp"
        app:style="borderActived"
        app:unactivedColor="@color/lightGray" />

    <player.wellnesssolutions.com.common.customize_views.MMTextView
        android:id="@+id/btnSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginx3"
        android:text="@string/select_all"
        android:textSize="@dimen/btn_previous_text_size"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/btnPrevious"
        app:layout_constraintEnd_toStartOf="@id/btnDownloadAllSelectedVideos"
        app:layout_constraintTop_toTopOf="@+id/btnPrevious" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/screen_search_result_viewpager_margin_top"
        android:background="@android:color/transparent"
        android:overScrollMode="never"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/txtSwipeRightForMoreOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrevious" />

    <TextView
        android:id="@+id/txtSwipeRightForMoreOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dip_14"
        android:text="@string/swipe_right_for_more_options"
        android:textColor="@color/color_d7"
        android:textSize="18dp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultViewPager" />

    <player.wellnesssolutions.com.common.customize_views.MMProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="@dimen/size_progress_circle"
        android:layout_height="@dimen/size_progress_circle"
        android:orientation="vertical"
        android:theme="@style/AppTheme.BlueAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/resultViewPager"
        app:layout_constraintEnd_toEndOf="@+id/resultViewPager"
        app:layout_constraintStart_toStartOf="@+id/resultViewPager"
        app:layout_constraintTop_toTopOf="@+id/resultViewPager" />

    <player.wellnesssolutions.com.common.customize_views.MMButton
        android:id="@+id/btnPlayInSearchResult"
        android:layout_width="@dimen/size_btn_play_in_search_result"
        android:layout_height="@dimen/size_btn_play_in_search_result"
        android:layout_marginEnd="@dimen/screen_search_result_btn_play_margin_right"
        android:layout_marginBottom="@dimen/screen_search_result_btn_play_margin_bottom"
        android:background="@drawable/bg_circle_blue"
        android:gravity="center"
        android:text="@string/btn_label_play"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_btn_play_in_search_result"
        android:textStyle="bold|italic"
        app:border="true"
        app:circle="true"
        app:isEnable="false"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icRefresh"
        android:layout_width="@dimen/ic_refresh_size"
        android:layout_height="@dimen/ic_refresh_size"
        android:contentDescription="@string/icon_refresh"
        android:src="@drawable/ic_refresh_56dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/loadingProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loadingProgressBar" />

    <TextView
        android:id="@+id/tvRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/retry"
        android:textColor="@color/title2TextColor"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icRefresh" />

</androidx.constraintlayout.widget.ConstraintLayout>